# SystemONE-Utiliities

./: AUTHORS.md  BUILDING.md  CMakeLists.txt  CNAME  LICENSE  Makefile  README.md  build.sh
About/coreutils/: arch.md
Headers/: ArgParser.h  aux.h  info.h  one_stdlib.h  stdlib.h  system.h  utils.h
Source/: Makefile
Source/Coreutils/arch/: arch.c
Source/Coreutils/basename/: basename.c
Source/Coreutils/cat/: cat.c
Source/Coreutils/chroot/: chroot.c
Source/Coreutils/dirname/: dirname.c
Source/Coreutils/domainname/: domainname.c
Source/Coreutils/echo/: echo.c
Source/Coreutils/factor/: factor.c
Source/Coreutils/false/: false.c
Source/Coreutils/hostid/: hostid.c
Source/Coreutils/hostname/: hostname.c
Source/Coreutils/link/: link.c
Source/Coreutils/nproc/: nproc.c
Source/Coreutils/pwd/: pwd.c
Source/Coreutils/readlink/: readlink.c
Source/Coreutils/realpath/: realpath.c
Source/Coreutils/rmdir/: rmdir.c
Source/arch/: arch.c
Source/coreutils/: Makefile  arch.c  basename.c  cat.c  coreutils.c  dirname.c  domainname.c  echo.c  factor.c  false.c  hostid.c  hostname.c  main.c  nproc.c  pwd.c  rmdir.c  sleep.c  tty.c  uname.c  whoami.c
Source/custom/: Makefile  SystemONE-version.c  custom.c  ldd.c  prime.c
Source/dirname/: dirname.c
Source/domainname/: domainname.c
Source/echo/: echo.c
Source/factor/: factor.c
Source/false/: false.c
Source/hostid/: hostid.c
Source/hostname/: hostname.c
Source/libcommon/: Makefile  basename.c  parser.c  progname.c
Source/nproc/: nproc.c
Source/pwd/: pwd.c
Source/sleep/: sleep.c
Source/true/: true.c
Source/uname/: uname.c
Source/yes/: yes.c
(+12 files in other folders)
